# Synth

./: .gitignore  CMakeLists.txt  README.md  audio.c  audio.h  common.h  gui.c  gui.h  input.c  input.h  main.c  setup.c
include/: audio.h  common.h  effects.h  input.h  setup.h
src/: effects.c  input.c  main.c  setup.c
tests/: acutest.h  test_effects.c
